; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/kvm/extr_emulate.c_kvm_mips_read_count.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/kvm/extr_emulate.c_kvm_mips_read_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.mips_coproc* }
%struct.mips_coproc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_mips_read_count(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.kvm_vcpu*, align 8
  %4 = alloca %struct.mips_coproc*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %3, align 8
  %5 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %6 = getelementptr inbounds %struct.kvm_vcpu, %struct.kvm_vcpu* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.mips_coproc*, %struct.mips_coproc** %7, align 8
  store %struct.mips_coproc* %8, %struct.mips_coproc** %4, align 8
  %9 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %10 = call i64 @kvm_mips_count_disabled(%struct.kvm_vcpu* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load %struct.mips_coproc*, %struct.mips_coproc** %4, align 8
  %14 = call i32 @kvm_read_c0_guest_count(%struct.mips_coproc* %13)
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %17 = call i32 (...) @ktime_get()
  %18 = call i32 @kvm_mips_read_count_running(%struct.kvm_vcpu* %16, i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @kvm_mips_count_disabled(%struct.kvm_vcpu*) #1

declare dso_local i32 @kvm_read_c0_guest_count(%struct.mips_coproc*) #1

declare dso_local i32 @kvm_mips_read_count_running(%struct.kvm_vcpu*, i32) #1

declare dso_local i32 @ktime_get(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
